--- a/CourseWork/MainWindow.xaml
+++ b/CourseWork/MainWindow.xaml
@@ -28,11 +28,11 @@
         <Grid Grid.Row="1">
             <materialDesign:Card Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
                 <StackPanel Grid.Row="1" Background="#734046">
-                    <RadioButton x:Name="homeRadio" Content="{DynamicResource Home}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenHome}" Checked="searchRadio_Checked"/>
-                    <RadioButton x:Name="searchRadio" Content="{DynamicResource Search}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenSearch}" Checked="searchRadio_Checked"/>
-                    <RadioButton x:Name="settingsRadio" Content="{DynamicResource Settings}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenSettings}" Checked="searchRadio_Checked"/>
-                    <RadioButton x:Name="cartRadio" Content="{DynamicResource Cart}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenCart}" Checked="searchRadio_Checked"/>
-                    <RadioButton x:Name="aboutRadio" Content="{DynamicResource About}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenAbout}" VerticalAlignment="Bottom" Checked="searchRadio_Checked"/>
+                    <RadioButton x:Name="homeRadio" Content="{DynamicResource Home}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenHome}" />
+                    <RadioButton x:Name="searchRadio" Content="{DynamicResource Search}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenSearch}" />
+                    <RadioButton x:Name="settingsRadio" Content="{DynamicResource Settings}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenSettings}" />
+                    <RadioButton x:Name="cartRadio" Content="{DynamicResource Cart}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenCart}"/>
+                    <RadioButton x:Name="aboutRadio" Content="{DynamicResource About}" FontSize="20" Height="50" Style="{StaticResource MenuButtonTheme}" Command="{Binding OpenAbout}" VerticalAlignment="Bottom" />
                 </StackPanel>
             </materialDesign:Card>
         </Grid>
