--- a/CourseWork/Views/SearchView.xaml
+++ b/CourseWork/Views/SearchView.xaml
@@ -45,7 +45,7 @@
                     <Grid Grid.Row="1">
                         <StackPanel Orientation="Vertical">
                         <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                            <TextBlock Margin="10,0,0,0" Text="От:" VerticalAlignment="Center" FontFamily="Helvetica"/>
+                            <TextBlock Margin="10,0,0,0" Text="{DynamicResource from}" VerticalAlignment="Center" FontFamily="Helvetica"/>
                             <TextBox Text="{Binding LowValue}" VerticalAlignment="Center" Margin="10,0,0,0" Width="80" BorderBrush="Black" BorderThickness="1"/>
                         </StackPanel>
                         <StackPanel Orientation="Vertical" >
@@ -56,7 +56,7 @@
                     <Grid Grid.Row="2">
                         <StackPanel Orientation="Vertical">
                         <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                            <TextBlock Margin="10,0,0,0" Text="До:" VerticalAlignment="Center" FontFamily="Helvetica"/>
+                            <TextBlock Margin="10,0,0,0" Text="{DynamicResource to}" VerticalAlignment="Center" FontFamily="Helvetica"/>
                             <TextBox Text="{Binding MaxValue}" VerticalAlignment="Center" Margin="10,0,0,0" Width="80" BorderBrush="Black" BorderThickness="1"/>
                         </StackPanel>
                         <StackPanel Orientation="Vertical">
@@ -67,7 +67,7 @@
                     <Grid Grid.Row="3">
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                             <TextBlock Text="{DynamicResource Category}" FontFamily="Helvetica" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                            <ComboBox ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}" MinWidth="100" materialDesign:HintAssist.Hint="Категория..." BorderThickness="2" BorderBrush="Black">
+                            <ComboBox ItemsSource="{Binding Categories}" SelectedItem="{Binding SelectedCategory}" MinWidth="100" materialDesign:HintAssist.Hint="{DynamicResource Category2}" BorderThickness="2" BorderBrush="Black">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Name}" Margin="0" VerticalAlignment="Bottom"
