--- a/CourseWork/Resources/language.xaml
+++ b/CourseWork/Resources/language.xaml
@@ -32,4 +32,6 @@
     <v:String x:Key="from">From:</v:String>
     <v:String x:Key="to">To:</v:String>
     <v:String x:Key="Language">Language:</v:String>
+    <v:String x:Key="Apply">Apply</v:String>
+    <v:String x:Key="More">More</v:String>
 </ResourceDictionary>
