--- a/CourseWork/Views/SettingsView.xaml
+++ b/CourseWork/Views/SettingsView.xaml
@@ -14,27 +14,28 @@
             <RowDefinition Height="332*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="281*"/>
+            <ColumnDefinition Width="519*"/>
         </Grid.ColumnDefinitions>
-        <Grid>
+        <Grid Margin="0,0,2.8,332.6" Grid.RowSpan="2">
             <materialDesign:Card Margin="5" UniformCornerRadius="5" materialDesign:ShadowAssist.ShadowDepth="Depth4">
-            <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
-                <TextBlock Text="{DynamicResource Language}" VerticalAlignment="Center"/>
-                <ComboBox SelectedItem="{Binding SelectedLanguage}" ItemsSource="{Binding Langs}" SelectedIndex="0" Width="100">
-                <i:Interaction.Triggers>
+                <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                    <TextBlock Text="{DynamicResource Language}" VerticalAlignment="Center"/>
+                    <ComboBox SelectedItem="{Binding SelectedLanguage}" ItemsSource="{Binding Langs}" SelectedIndex="0" Width="100">
+                        <!--<i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
                         <i:InvokeCommandAction Command="{Binding LanguageChanged}"/>
                     </i:EventTrigger>
-                </i:Interaction.Triggers>
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Name}" Margin="0" VerticalAlignment="Bottom"
+                </i:Interaction.Triggers>-->
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" Margin="0" VerticalAlignment="Bottom"
                                        HorizontalAlignment="Center"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            </StackPanel>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    <Button Command="{Binding ConfirmChange}" Content="{DynamicResource Apply}" Style="{StaticResource RoundedButtonStyle}" Height="35" Width="60" Margin="20,0,0,0"/>
+                </StackPanel>
             </materialDesign:Card>
         </Grid>
     </Grid>
