--- a/CourseWork/Views/AdminViews/DeliveriesAdminView.xaml
+++ b/CourseWork/Views/AdminViews/DeliveriesAdminView.xaml
@@ -14,7 +14,7 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Grid.Column="0" Margin="0,0,0,7.4" >
             <materialDesign:Card Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                <DataGrid x:Name="partsGrid" VerticalAlignment="Top" ItemsSource="{Binding Deliveries}" SelectedItem="{Binding SelectedDelivery}">
+                <!--<DataGrid x:Name="partsGrid" VerticalAlignment="Top" ItemsSource="{Binding Deliveries}" SelectedItem="{Binding SelectedDelivery}">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn Header="Delete" Width="auto">
                             <DataGridTemplateColumn.CellTemplate>
@@ -26,7 +26,55 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                </DataGrid>
+                </DataGrid>-->
+                <ListBox ItemsSource="{Binding Deliveries}" SelectedItem="{Binding SelectedDelivery}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Border>
+                                <StackPanel Orientation="Horizontal">
+                                    <materialDesign:Card>
+                                        <StackPanel Orientation="Horizontal">
+                                            <StackPanel Orientation="Horizontal">
+                                                <Button Content="{materialDesign:PackIcon Kind=Delete}" Command="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=DataContext.DeleteCommand}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="20,0,20,0">
+                                                <TextBlock Text="Id: "/>
+                                                <TextBlock Text="{Binding DeliveryId}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="20,0,20,0">
+                                                <TextBlock Text="{DynamicResource Name}"/>
+                                                <TextBlock Text="{Binding Name}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="20,0,20,0">
+                                                <TextBlock Text="{DynamicResource Price}"/>
+                                                <TextBlock Text="{Binding Price}"/>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="20,0,20,0">
+                                                <TextBlock Text="Description: "/>
+                                                <TextBlock Text="{Binding Description}"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </materialDesign:Card>
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem" 
+                            BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                            <Style.Triggers>
+                                <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                                    <Setter Property="IsSelected" Value="True"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                </ListBox>
             </materialDesign:Card>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
