--- a/CourseWork/Views/AdminViews/PartsAdminView.xaml
+++ b/CourseWork/Views/AdminViews/PartsAdminView.xaml
@@ -27,8 +27,72 @@
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
-            </materialDesign:Card>
-        </Grid>
+                    <!--<ListBox ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart}" MinWidth="780" MaxWidth="900">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Border>
+                                    <materialDesign:Card>
+                                        <WrapPanel Orientation="Vertical">
+                                            <StackPanel Orientation="Horizontal">
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Button Content="{materialDesign:PackIcon Kind=Delete}" Command="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=DataContext.DeleteCommand}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="Id: "/>
+                                                    <TextBlock Text="{Binding PartId}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="{DynamicResource Name}"/>
+                                                    <TextBlock Text="{Binding Name}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="{DynamicResource Price}"/>
+                                                    <TextBlock Text="{Binding Price}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="Description: "/>
+                                                    <TextBlock Text="{Binding Description}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="Quantity: "/>
+                                                    <TextBlock Text="{Binding Quantity}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="Mark: "/>
+                                                    <TextBlock Text="{Binding Mark.MarkName}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="Category: "/>
+                                                    <TextBlock Text="{Binding Category.Name}"/>
+                                                </StackPanel>
+                                                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="10,0,0,0">
+                                                    <TextBlock Text="Provider: "/>
+                                                    <TextBlock Text="{Binding Provider.Name}"/>
+                                                </StackPanel>
+                                            </StackPanel>
+                                        </WrapPanel>
+                                    </materialDesign:Card>
+                                </Border>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                        <ListBox.ItemContainerStyle>
+                            <Style TargetType="ListBoxItem" 
+                                BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                                <Style.Triggers>
+                                    <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                                        <Setter Property="IsSelected" Value="True"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ListBox.ItemContainerStyle>
+                        <ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel />
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>
+                    </ListBox>-->
+                </materialDesign:Card>
+            </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
             <materialDesign:Card Margin="10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
                 <StackPanel Orientation="Horizontal">
