--- a/CourseWork/Views/SearchView.xaml
+++ b/CourseWork/Views/SearchView.xaml
@@ -85,7 +85,7 @@
         </Grid>
         <Grid Grid.Row="1" Grid.Column="0">
             <materialDesign:Card Margin="10,10,10,10" materialDesign:ShadowAssist.ShadowDepth="Depth4" UniformCornerRadius="5">
-                <ListBox ItemsSource="{Binding Parts}" x:Name="partList" Height="360" MaxHeight="500">
+                <ListBox ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart}" x:Name="partList" MinHeight="360" MaxHeight="500" SelectionMode="Extended">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Border CornerRadius="6" BorderThickness="1" DockPanel.Dock="Top" BorderBrush="Transparent">
@@ -98,7 +98,7 @@
                                     <materialDesign:Card UniformCornerRadius="10">
                                         <StackPanel Orientation="Vertical" Height=" 230" Width="130">
 
-                                            <Image Width="130" Height="120" Margin="5" Source="{Binding ImageLink}" />
+                                            <Image Width="130" Height="110" Margin="5" Source="{Binding ImageLink}" />
                                             <StackPanel Orientation="Horizontal">
                                                 <TextBlock Text="{DynamicResource Name}" FontFamily="Helvetica"/>
                                                 <TextBlock Text="{Binding Name}" FontFamily="Helvetica"/>
@@ -120,13 +120,23 @@
                                                 <TextBlock Text="{Binding Mark.MarkName}"/>
                                             </StackPanel>
                                             <Separator Background="Black"/>
-                                            <Button Command="{Binding AddToCartCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}}"/>
+                                            <Button Command="{Binding RelativeSource={RelativeSource AncestorType=ListBox}, Path=DataContext.OpenFullInfo}" Style="{StaticResource RoundedButtonStyle}" Content="{DynamicResource More}"/>
                                         </StackPanel>
                                     </materialDesign:Card>
                                 </StackPanel>
                             </Border>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem" 
+                            BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                            <Style.Triggers>
+                                <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                                    <Setter Property="IsSelected" Value="True"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
                     <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
                             <WrapPanel />
